обновление тестов